docs(topic): enhance core, concurrency, api, security index pages
Add comprehensive internal developer resources:

- Evolution overview with version milestones
- Core contributors tables (Per Liden, Ron Pressler, Doug Lea, etc.)
- Source code structure with file paths
- Key internal classes with access levels
- VM parameters quick reference
- Diagnostic tools and commands
- Statistics

Total: +578 lines across 4 index files

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>