@@ -4,6 +4,28 @@ JVM、内存、性能、模块系统等底层技术。
 
 ---
 
+## 演进概览
+
+```
+JDK 1.0 ─── JDK 5 ─── JDK 8 ─── JDK 11 ─── JDK 17 ─── JDK 21 ─── JDK 26
+   │           │           │            │            │            │           │
+ 解释器      分层编译    元空间      ZGC         强封装      虚拟线程    分代 ZGC
+ Serial GC   G1 GC      Lambda      JFR         内部API     Project Loom G1优化
+```
+
+### 版本里程碑
+
+| 版本 | 主题 | 关键特性 |
+|------|------|----------|
+| **JDK 5** | 性能革命 | 分层编译、JMX、并发工具 |
+| **JDK 8** | 内存模型 | 元空间、Lambda、Compressed Oops |
+| **JDK 11 LTS** | 低延迟 | ZGC (实验)、JFR、HTTP Client |
+| **JDK 17 LTS** | 强封装 | 遗留封装限制、JDK 内部 API 封装 |
+| **JDK 21 LTS** | 高并发 | 虚拟线程、分代 ZGC |
+| **JDK 26** | 性能优化 | G1 +10-20%、ZGC NUMA |
+
+---
+
 ## 主题列表
 
 ### [GC 演进](gc/)
@@ -100,6 +122,157 @@ JVM 参数、调优工具和监控技术从 JDK 1.0 到 JDK 26 的演进。
 | JDK 21 | 分代 ZGC | 生产就绪 |
 
 → [JVM 调优时间线](jvm/timeline.md)
+
+---
+
+## 核心贡献者
+
+### GC 团队
+
+| 贡献者 | 公司 | 主要贡献 |
+|--------|------|----------|
+| **Per Liden** | Oracle | ZGC 创始人, G1 优化 |
+| **Erik Österlund** | Oracle | ZGC 核心开发者 |
+| **Stefan Karlsson** | Oracle | 分代 ZGC (JEP 439) |
+| **William Kemper** | Red Hat | 分代 Shenandoah (JEP 429) |
+| **Thomas Schatzl** | Oracle | G1 GC 维护者 |
+
+### JVM/性能团队
+
+| 贡献者 | 公司 | 主要贡献 |
+|--------|------|----------|
+| **John Rose** | Oracle | invokedynamic, Lambda |
+| **Vladimir Kozlov** | Oracle | JIT 编译器, aarch64 |
+| **Christian Thalinger** | Oracle | JIT 编译器 |
+
+### 模块系统
+
+| 贡献者 | 公司 | 主要贡献 |
+|--------|------|----------|
+| **Mark Reinhold** | Oracle | JPMS (JEP 261) 首席架构师 |
+| **Alex Buckley** | Oracle | JLS/JVMS 规范维护 |
+
+---
+
+## 内部开发者资源
+
+### HotSpot 源码结构
+
+```
+src/hotspot/share/
+├── gc/                          # GC 实现
+│   ├── g1/                      # G1 GC
+│   ├── shenandoah/              # Shenandoah GC
+│   ├── z/                       # ZGC
+│   ├── parallel/                # Parallel GC
+│   ├── serial/                  # Serial GC
+│   └── shared/                  # GC 共享代码
+├── interpreter/                 # 解释器
+├── compiler/                    # JIT 编译器
+│   ├── c1/                      # C1 (Client Compiler)
+│   ├── c2/                      # C2 (Server Compiler)
+│   └── graal/                   # Graal JIT (可选)
+├── oops/                        # 对象模型
+│   ├── instanceKlass.cpp        # 类元数据
+│   ├── arrayKlass.cpp           # 数组类
+│   └── symbol.cpp               # 符号表
+├── memory/                      # 内存管理
+│   ├── metaspace.cpp            # 元空间
+│   ├── universe.cpp             # 堆初始化
+│   └── virtualspace.cpp         # 虚拟内存
+├── classfile/                   # 类文件处理
+├── classloader/                 # 类加载器
+├── prims/                       # JVM 内部原语
+│   ├── jni.cpp                  # JNI 实现
+│   ├── jvmti.cpp                # JVMTI 实现
+│   └── jvm.cpp                  # JVM 接口
+└── runtime/                     # 运行时
+    ├── thread.cpp               # 线程实现
+    ├── mutex.cpp                # 锁实现
+    └── safepoint.cpp            # Safepoint
+```
+
+### 关键内部类
+
+| 类 | 作用 | 访问级别 |
+|---|------|----------|
+| `jdk.internal.misc.Unsafe` | 直接内存访问 | `@Restricted` |
+| `jdk.internal.vm.VectorSupport` | Vector API 支持 | 内部 |
+| `jdk.internal.access.JavaLangAccess` | 内部访问 | `@Restricted` |
+| `jdk.internal.misc.Signal` | Unix 信号 | 内部 |
+
+### VM 参数速查
+
+```bash
+# GC 选择
+-XX:+UseG1GC                    # G1 (默认 JDK 9+)
+-XX:+UseZGC                     # ZGC
+-XX:+UseShenandoahGC            # Shenandoah
+-XX:+UseParallelGC              # Parallel
+-XX:+UseSerialGC                # Serial
+
+# 内存配置
+-Xms4g                          # 初始堆
+-Xmx8g                          # 最大堆
+-XX:MetaspaceSize=256m          # 元空间初始大小
+-XX:MaxMetaspaceSize=512m       # 元空间最大值
+-XX:CompressedClassSpaceSize=1g # 压缩类空间
+
+# GC 调优
+-XX:MaxGCPauseMillis=200        # G1 目标暂停时间
+-XX:G1HeapRegionSize=16m        # G1 Region 大小
+-XX:ConcGCThreads=4             # 并发 GC 线程
+-XX:ParallelGCThreads=8         # 并行 GC 线程
+
+# 性能诊断
+-XX:+PrintGCDetails             # GC 详细日志
+-XX:+PrintGCTimeStamps          # GC 时间戳
+-Xlog:gc*:file=gc.log           # JDK 9+ 统一日志
+-XX:+UseStringDeduplication     # 字符串去重
+
+# JIT 编译
+-XX:TieredStopAtLevel=3         # 分层编译级别
+-XX:CompileThreshold=10000      # C2 编译阈值
+-XX:+PrintCompilation           # 打印编译信息
+-XX:+UnlockDiagnosticVMOptions  # 解锁诊断选项
+-XX:+LogCompilation             # 记录编译日志
+```
+
+### 诊断工具
+
+```bash
+# jstat - GC 统计
+jstat -gcutil <pid> 1000 10
+
+# jmap - 堆转储
+jmap -dump:live,format=b,file=heap.hprof <pid>
+
+# jstack - 线程转储
+jstack -l <pid>
+
+# jinfo - VM 参数
+jinfo -flags <pid>
+
+# jcmd - JVM 诊断
+jcmd <pid> GC.heap_info
+jcmd <pid> VM.flags
+jcmd <pid> Thread.print
+
+# JFR (JDK 11+)
+jcmd <pid> JFR.start name=myrecording
+jcmd <pid> JFR.dump name=myrecording filename=recording.jfr
+```
+
+---
+
+## 统计数据
+
+| 指标 | 数值 |
+|------|------|
+| GC 算法 | 5 (Serial, Parallel, G1, ZGC, Shenandoah) |
+| JIT 编译器 | 2 (C1, C2) + Graal |
+| 类加载器层次 | 3 (Bootstrap, Platform, Application) |
+| JFR 事件类型 | 200+ |
 
 ---
 
